--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -13,8 +13,166 @@
     box-shadow: none;
     box-sizing: border-box;
 }
+html,
+body {
+    height: 100%;
+}
+img,
+picture,
+video,
+canvas,
+svg {
+    display: block;
+    max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+    font: inherit;
+}
 
+input::placeholder {
+    font-family: inherit;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    overflow-wrap: break-word;
+}
+:root {
+    --clr-primary-100: hsl(0, 0%, 100%);
+    --clr-primary-200: hsl(227, 100%, 98%);
 
-/* ==================
-       Layout
-================== */
+    --clr-neutral-400: hsl(217, 20%, 51%);
+    --clr-neutral-500: hsl(217, 35%, 45%);
+    --clr-accent-800: hsl(217, 21%, 21%);
+
+    --clr-primaryDarkMode-800: hsl(222, 41%, 20%);
+    --clr-primaryDarkMode-900: hsl(220, 40%, 13%);
+    --clr-accentDarkMode-300: hsl(212, 92%, 62%);
+    --clr-accentDarkMode-600: hsl(212, 100%, 50%);
+
+    --clr-accent-400: hsl(0, 90%, 66%);
+}
+body {
+    display: grid;
+    margin-inline: auto;
+    place-items: center;
+    padding: 1rem;
+    max-width: 1100px;
+    background: var(--clr-primaryDarkMode-900);
+    font-size: 1rem;
+    font-family: "Space Mono", monospace;
+    color: var(--clr-primary-200);
+    line-height: 25px;
+    background-color: var(--clr-primaryDarkMode-900);
+}
+ul {
+    list-style: none;
+}
+a {
+    font-size: 0.875rem;
+    text-decoration: none;
+    color: var(--clr-primary-200);
+    cursor: pointer;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.main-header {
+    font-size: 1.375rem;
+}
+.theme-toggle {
+    position: relative;
+    padding: 0.5rem 2rem;
+    border: none;
+    text-transform: uppercase;
+    background: transparent;
+    color: var(--clr-primary-100);
+    cursor: pointer;
+}
+.theme-toggle::after {
+    position: absolute;
+    right: 0;
+    top: 0.60rem;
+    content: url(/starter-code/assets/icon-sun.svg);
+}
+.form {
+    position: relative;
+    padding: 0.5rem 0.75rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 0.875rem;
+    border-radius: 1rem;
+    background-color: var(--clr-primaryDarkMode-800);
+}
+.form-error-hide {
+    display: none;
+}
+.form-error-show {
+    display: block;
+    position: absolute;
+    right: 6rem;
+    color: var(--clr-accent-400);
+    font-weight: 700;
+}
+.input {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 1rem;
+    color: var(--clr-primary-100);
+    caret-color: var(--clr-accentDarkMode-600);
+    background: transparent;
+}
+.input::placeholder {
+    color: var(--clr-primary-100);
+}
+.submit-button {
+    margin-left: auto;
+    padding: 0.75rem;
+    border: none;
+    border-radius: 0.5rem;
+    color: var(--clr-primary-100);
+    background-color: var(--clr-accentDarkMode-600);
+    cursor: pointer;
+}
+.submit-button:hover {
+    background-color: var(--clr-accentDarkMode-300);
+}
+.profile {
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.5rem;
+    border-radius: 1rem;
+    font-size: 0.875rem;
+    background-color: var(--clr-primaryDarkMode-800);
+}
+.user-profile {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 0.25fr);
+    grid-gap: 0.25rem 1rem;
+}
+.user-avatar {
+    grid-area: 1 / 1 / 5 / 2;
+    align-self: center;
+    max-width: 70px;
+    max-height: 70px;
+    border-radius: 50%;
+}
