--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -194,3 +194,69 @@ a {
 .profile-bio {
     grid-area: 6 / 1 / 7 / 7;
 }
+.user-stats {
+    align-self: stretch;
+    padding: 1rem 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    text-align: center;
+    border-radius: 1rem;
+    background-color: var(--clr-primaryDarkMode-900);
+}
+.user-stats-counts div:last-child {
+    font-weight: 700;
+}
+.user-socials {
+    display: flex;
+    align-self: stretch;
+    flex-direction: column;
+    gap: 1rem;
+}
+.user-social-links {
+    display: flex;
+    align-items: center;
+}
+.user-social-links svg {
+    min-width: 2rem;
+    filter: brightness(5);
+}
+.user-social-links-error {
+    color: var(--clr-neutral-400);
+}
+.user-svg-error {
+    opacity: 0.5;
+}
+
+/* -----------Media Queries----------- */
+
+@media screen and (min-width: 540px) {
+    .input {
+        flex-basis: 60%;
+    }
+    .profile {
+        padding: 2.5rem;
+    }
+    .user-profile {
+        grid-gap: 0rem 1rem;
+    }
+    .user-avatar {
+        max-width: 117px;
+        max-height: 117px;
+    }
+    .profile-name {
+        font-size: 1.375rem;
+    }
+    .user-stats {
+        justify-content: flex-start;
+        gap: 6rem;
+        text-align: left;
+    }
+    .user-socials {
+        flex-flow: row wrap;
+        justify-content: flex-start;
+    }
+    .user-social-links {
+        flex-basis: 45%;
+    }
+}
