--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -71,6 +71,7 @@ body {
     color: var(--clr-primary-200);
     line-height: 25px;
     background-color: var(--clr-primaryDarkMode-900);
+    
 }
 ul {
     list-style: none;
@@ -260,3 +261,45 @@ a {
         flex-basis: 45%;
     }
 }
+
+@media screen and (min-width: 740px) {
+    .container {
+        width: 40rem;
+    }
+    .profile {
+        padding: 3rem 0;
+        display: grid;
+        grid-template-rows: repeat(3, auto);
+        grid-template-columns: 0.5fr 1fr;
+        justify-content: center;
+        grid-gap: 1.5rem 2.5rem;
+    }
+    .user-profile {
+        grid-area: 1/1/2/3;
+        grid-template-rows: 4, 0.25fr;
+    }
+    .user-avatar {
+        grid-area: 1/1/5/2;
+    }
+    .profile-name {
+        grid-area: 1/2/2/4;
+        font-size: 1.375rem;
+    }
+    .profile-username {
+        grid-area: 2/2/3/4;
+    }
+    .profile-date {
+        grid-area: 1/5/2/7;
+    }
+    .profile-bio {
+        grid-area: 4/2/5/7;
+    }
+    .user-stats, .user-socials {
+        grid-column: 2/3;
+    }
+    .user-stats-counts div:last-child {
+        font-size: 1rem;
+    }
+}
+
+/* --------------------Theme Toggle---------------- */
