--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -220,13 +220,13 @@ a {
 }
 .user-social-links svg {
     min-width: 2rem;
-    filter: brightness(5);
+    
 }
 .user-social-links-error {
     color: var(--clr-neutral-400);
 }
 .user-svg-error {
-    opacity: 0.5;
+    opacity: 0.4;
 }
 
 /* -----------Media Queries----------- */
@@ -303,3 +303,35 @@ a {
 }
 
 /* --------------------Theme Toggle---------------- */
+
+.light-theme {
+    color: var(--clr-neutral-400);
+    background-color: var(--clr-primary-200);
+}
+.light-theme .header, .light-theme .theme-toggle {
+    font-weight: 700;
+    color: var(--clr-accent-800);
+}
+.light-theme .theme-toggle::after {
+    content: url(/starter-code/assets/icon-moon.svg);
+}
+.light-theme .form, .light-theme .profile,
+.light-theme .user-social-links-error {
+    background-color: var(--clr-primary-100);
+}
+.light-theme .input, .light-theme .input::placeholder {
+    color: var(--clr-neutral-400);
+}
+.light-theme .user-stats {
+    background-color: var(--clr-primary-200);
+}
+.light-theme .user-stats div:last-child {
+    color: var(--clr-accent-800);
+}
+.light-theme .user-social-links a {
+    color: var(--clr-neutral-500);
+}
+.light-theme .user-social-links svg {
+    filter: brightness(1);
+}
+
